[package]
name = "cf-grpc-hub"
version = "0.1.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "gRPC Hub module"
repository.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-system"]
categories = ["network-programming"]

[lib]
name = "grpc_hub"

[lints]
workspace = true

[dependencies]
modkit = { workspace = true }
modkit-transport-grpc = { workspace = true }
cf-system-sdks = { workspace = true }
inventory = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
http = { workspace = true }

# gRPC server
tonic = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }
