[package]
name = "users-info"
version = "0.6.1"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = ["odata"]
odata = []          # enable streaming API with typed queries
integration = []    # gate integration tests

[dependencies]
# SDK - public API, models, and errors
users-info-sdk = { path = "../users-info-sdk", features = ["odata"] }

# AuthZ resolver for authorization (PEP flow)
authz-resolver-sdk = { package = "cf-authz-resolver-sdk", path = "../../../../modules/system/authz-resolver/authz-resolver-sdk" }

# Core dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }

# Serde and JSON schema
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true, features = ["time"] }

# HTTP and REST
axum = { workspace = true, features = ["macros"] }
tower-http = { workspace = true, features = ["timeout"] }
futures-util = { workspace = true }
http = { workspace = true }

# Time handling
time = { workspace = true }

# URL parsing
url = { workspace = true }

# UUID support
uuid = { workspace = true }


# Database - SeaORM (driver features come from modkit-db)
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Local dependencies
modkit = { workspace = true }
modkit-http = { workspace = true }
modkit-db = { workspace = true, features = ["sqlite", "pg"] }
modkit-db-macros = { workspace = true }
modkit-security = { workspace = true }
modkit-canonical-errors = { workspace = true }
modkit-odata = { workspace = true, features = ["with-utoipa"] }
modkit-sdk = { workspace = true }
modkit-macros = { workspace = true }
opentelemetry = { workspace = true }

[dev-dependencies]
tokio-util = { workspace = true }
tower = { workspace = true, features = ["util"] }
api_gateway = { package = "cf-api-gateway", path = "../../../../modules/system/api-gateway" }
serde_json = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
# Testing dependencies for tracing verification
tracing-test = { workspace = true }
httpmock = { workspace = true }
tokio-test = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
