[package]
name = "cf-static-credstore-plugin"
version = "0.1.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CredStore plugin with static secret mapping for development and testing"
repository.workspace = true
keywords = ["cyberfabric", "cyberfabric-module"]

[lib]
name = "static_credstore_plugin"

[lints]
workspace = true

[dependencies]
# Local dependencies
credstore-sdk = { package = "cf-credstore-sdk", version = "0.1.3", path = "../../credstore-sdk" }
types-registry-sdk = { package = "cf-types-registry-sdk", version = "0.1.3", path = "../../../system/types-registry/types-registry-sdk" }

# ModKit dependencies
modkit = { workspace = true }
modkit-macros = { workspace = true }
modkit-security = { workspace = true }

# Async runtime
async-trait = { workspace = true }

# Data structures
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Required by modkit::module macro
inventory = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
serde-saphyr = { workspace = true }
