[package]
name = "cf-static-mini-chat-audit-plugin"
description = "Static audit plugin for mini-chat — logs audit events via tracing"
version = "0.1.5"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-module"]
categories = ["artificial-intelligence"]

[lib]
name = "static_mini_chat_audit_plugin"

[lints]
workspace = true

[dependencies]
# Plugin SDK
mini-chat-sdk = { package = "cf-mini-chat-sdk", version = "0.5.3", path = "../../mini-chat-sdk" }
types-registry-sdk = { package = "cf-types-registry-sdk", version = "0.1.5", path = "../../../system/types-registry/types-registry-sdk" }

# ModKit dependencies
modkit = { workspace = true }
modkit-macros = { workspace = true }

# Async runtime
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Required by modkit::module macro
inventory = { workspace = true }
