[package]
name = "cf-authn-resolver-sdk"
version = "0.1.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SDK for authn_resolver module: API traits, models, and error definitions"
repository.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-system"]
categories = ["authentication"]

[lib]
name = "authn_resolver_sdk"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# GTS types
gts = { workspace = true }
gts-macros = { workspace = true }

# ModKit dependencies
modkit = { workspace = true }
modkit-security = { workspace = true }
