[package]
name = "cf-authn-resolver"
version = "0.1.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AuthN resolver module - discovers and routes to plugins"
repository.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-system"]
categories = ["authentication"]

[lib]
name = "authn_resolver"

[lints]
workspace = true

[dependencies]
# Local dependencies
authn-resolver-sdk = { package = "cf-authn-resolver-sdk", version = "0.1.2", path = "../authn-resolver-sdk" }
types-registry-sdk = { package = "cf-types-registry-sdk", version = "0.1.3", path = "../../types-registry/types-registry-sdk" }

# ModKit dependencies
modkit = { workspace = true }
modkit-macros = { workspace = true }
modkit-security = { workspace = true }

# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# Data types
uuid = { workspace = true }

# Error handling and serialization
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Required by modkit::module macro
inventory = { workspace = true }

# Logging
tracing = { workspace = true }
