[package]
name = "cf-nodes-registry"
version = "0.1.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Nodes registry module"
repository.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-system"]
categories = ["development-tools"]

[lib]
name = "nodes_registry"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
axum = { workspace = true, features = ["macros"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
thiserror = { workspace = true }

modkit = { workspace = true }
modkit-node-info = { workspace = true }
modkit-macros = { workspace = true }
nodes_registry-sdk = { package = "cf-nodes-registry-sdk", version = "0.1.4", path = "../nodes-registry-sdk" }
