[package]
name = "cf-oagw-sdk"
description = "SDK for the OpenAPI Gateway: API traits, models, and error definitions"
version = "0.1.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-system"]
categories = ["web-programming"]

[lib]
name = "oagw_sdk"
path = "src/lib.rs"

[features]
default = []
axum = ["dep:axum"]

[dependencies]
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
modkit-security = { workspace = true }
axum = { workspace = true, features = ["ws"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
async-trait = { workspace = true }
axum = { workspace = true, features = ["ws"] }
